--- a/terminal.css
+++ b/terminal.css
@@ -2,11 +2,24 @@ html {
     background-color: #000020;
     font-family: 'Ubuntu Mono', monospace;
     padding: 5px;
-    padding-left: 10px;
+    padding-left: 5px;
+    color: #ffffff;
+}
+
+header {
+    background-color: #000000;
+    border-radius: 10px;
+    padding-top: 10px;
+    padding: 10px;
 }
 
 menu {
     padding: 0px;
+    margin: 0px;
+}
+
+.lheader {
+    margin: 0;
 }
 
 .terminalButton {
@@ -20,8 +33,9 @@ menu {
     font-family: 'Ubuntu Mono', monospace;
     font-weight: bold;
     text-align: center;
-    margin-top: 0px;
-    margin-bottom: 3px;
+    position: relative;
+    margin-bottom: 2px;
+    top: 0px;
 }
 
 .terminalButton:hover {
@@ -29,8 +43,7 @@ menu {
 }
 
 .terminalButton:active {
-    margin-top: 3px;
-    margin-bottom: 0px;
+    top: 5px;
     box-shadow: 0px 2px #1f003f;
     border-radius: 10px;
     background-color: #3f007f;
