--- a/terminal.css
+++ b/terminal.css
@@ -16,10 +16,7 @@ header {
 menu {
     padding: 0px;
     margin: 0px;
-}
-
-.lheader {
-    margin: 0;
+    align-items: center;
 }
 
 .terminalButton {
@@ -34,7 +31,6 @@ menu {
     font-weight: bold;
     text-align: center;
     position: relative;
-    margin-bottom: 2px;
     top: 0px;
 }
 
@@ -47,4 +43,63 @@ menu {
     box-shadow: 0px 2px #1f003f;
     border-radius: 10px;
     background-color: #3f007f;
+}
+
+textarea.codeshowcase {
+    font-family: 'Ubuntu Mono', monospace;
+    background-color: #000000;
+    color: #ffffff;
+    border-radius: 10px;
+    resize: none;
+    border: none;
+    padding: 10px;
+}
+
+h2 {
+    margin: 0;
+}
+
+.gridrow{
+    display: grid;
+    grid-auto-flow: column;
+    width: 50%;
+}
+
+.gi {
+    width: 95%;
+    height: 300px;
+
+    display: inline;
+    cursor: pointer;
+    box-shadow: 0px 5px #1f003f;
+    border-radius: 10px;
+    background-color: #7f00ff;
+    padding: 0px;
+    border: 0;
+    font-family: 'Ubuntu Mono', monospace;
+    font-weight: bold;
+    position: relative;
+    display: inline-flex; /* keep the inline nature of buttons */
+    align-items: flex-start; /* this is default */
+    top: 0px;
+}
+
+.gi:hover {
+    background-color: #3f007f;
+}
+
+.gi:active {
+    top: 5px;
+    box-shadow: 0px 2px #1f003f;
+    border-radius: 10px;
+    background-color: #3f007f;
+}
+
+.gridimg {
+    margin: 0;
+    padding: 0;
+    height: 30%;
+    width: 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
