--- a/terminal.css
+++ b/terminal.css
@@ -39,7 +39,7 @@ menu {
 }
 
 .terminalButton:active {
-    top: 5px;
+    top: 3px;
     box-shadow: 0px 2px #1f003f;
     border-radius: 10px;
     background-color: #3f007f;
@@ -89,7 +89,7 @@ h2 {
 }
 
 .gi:active {
-    top: 5px;
+    top: 3px;
     box-shadow: 0px 2px #1f003f;
     border-radius: 10px;
     background-color: #3f007f;
@@ -102,4 +102,25 @@ h2 {
     width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    overflow: hidden;
+}
+
+.terminalTextBox {
+    display: inline-block;
+    cursor: pointer;
+    box-shadow: 0px 5px #1f003f;
+    border-radius: 10px;
+    background-color: #7f00ff;
+    padding: 10px;
+    border: 0;
+    font-family: 'Ubuntu Mono', monospace;
+    font-weight: bold;
+    text-align: center;
+    position: relative;
+    top: 0px;
+}
+
+.invertedCircle {
+    background-color: transparent;
+    filter: invert(100%);
 }
