--- a/terminal.css
+++ b/terminal.css
@@ -45,6 +45,17 @@ menu {
     background-color: #3f007f;
 }
 
+.terminalTextInput {
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #7f00ff;
+    font-family: 'Ubuntu Mono', monospace;
+    font-weight: bold;
+    box-shadow: 0px 5px #1f003f;
+    border: 2px #3f007f;
+    margin-bottom: 10px;
+}
+
 textarea.codeshowcase {
     font-family: 'Ubuntu Mono', monospace;
     background-color: #000000;
@@ -79,7 +90,7 @@ h2 {
     font-family: 'Ubuntu Mono', monospace;
     font-weight: bold;
     position: relative;
-    display: inline-flex; /* keep the inline nature of buttons */
+    display:inline-block; /* keep the inline nature of buttons */
     align-items: flex-start; /* this is default */
     top: 0px;
 }
@@ -90,7 +101,7 @@ h2 {
 
 .gi:active {
     top: 3px;
-    box-shadow: 0px 2px #1f003f;
+        box-shadow: 0px 2px #1f003f;
     border-radius: 10px;
     background-color: #3f007f;
 }
